fable/test/syntax_error/power_no_exponent.f
      program prog
      x = 1.2**
      end
